kubernetes/infrastructure/resources/gateways/https-gateway-thetillhoff-de.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: https-gateway-thetillhoff-de
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  gatewayClassName: cilium
  listeners:
    - name: thetillhoff-de
      hostname: thetillhoff.de
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: thetillhoff-de-tls-certificate
    - name: link-thetillhoff-de
      hostname: "link.thetillhoff.de"
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: link-thetillhoff-de-tls-certificate
    - name: analytics-thetillhoff-de
      hostname: "analytics.thetillhoff.de"
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: analytics-thetillhoff-de-tls-certificate
    - name: pw-thetillhoff-de
      hostname: "pw.thetillhoff.de"
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: pw-thetillhoff-de-tls-certificate
    - name: webscan-thetillhoff-de
      hostname: "webscan.thetillhoff.de"
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: webscan-thetillhoff-de-tls-certificate
    - name: wedding-thetillhoff-de
      hostname: "wedding.thetillhoff.de"
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: wedding-thetillhoff-de-tls-certificate
    - name: cloud-thetillhoff-de
      hostname: "cloud.thetillhoff.de"
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: cloud-thetillhoff-de-tls-certificate
